Finish preliminary report

--- a/report/report.bib
+++ b/report/report.bib
@@ -6,3 +6,104 @@
   year={1992},
   organization={ACM}
 }
+
+@inproceedings{ho1995random,
+  title={Random decision forests},
+  author={Ho, Tin Kam},
+  booktitle={Document Analysis and Recognition, 1995., Proceedings of the Third International Conference on},
+  volume={1},
+  pages={278--282},
+  year={1995},
+  organization={IEEE}
+}
+
+@book{quinlan2014c4,
+  title={C4. 5: programs for machine learning},
+  author={Quinlan, J Ross},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{hothorn2006unbiased,
+  title={Unbiased recursive partitioning: A conditional inference framework},
+  author={Hothorn, Torsten and Hornik, Kurt and Zeileis, Achim},
+  journal={Journal of Computational and Graphical statistics},
+  volume={15},
+  number={3},
+  pages={651--674},
+  year={2006},
+  publisher={Taylor \& Francis}
+}
+
+@book{pareto1964cours,
+  title={Cours d'{\'e}conomie politique},
+  author={Pareto, Vilfredo},
+  year={1964},
+  publisher={Librairie Droz}
+}
+
+@article{thorndike1953belongs,
+  title={Who belongs in the family?},
+  author={Thorndike, Robert L},
+  journal={Psychometrika},
+  volume={18},
+  number={4},
+  pages={267--276},
+  year={1953},
+  publisher={Springer}
+}
+
+@article{forgy1965cluster,
+  title={Cluster analysis of multivariate data: efficiency versus interpretability of classifications},
+  author={Forgy, Edward W},
+  journal={Biometrics},
+  volume={21},
+  pages={768--769},
+  year={1965}
+}
+
+@article{ward1963hierarchical,
+  title={Hierarchical grouping to optimize an objective function},
+  author={Ward Jr, Joe H},
+  journal={Journal of the American statistical association},
+  volume={58},
+  number={301},
+  pages={236--244},
+  year={1963},
+  publisher={Taylor \& Francis}
+}
+
+@article{szekely2007measuring,
+  title={Measuring and testing dependence by correlation of distances},
+  author={Sz{\'e}kely, G{\'a}bor J and Rizzo, Maria L and Bakirov, Nail K and others},
+  journal={The Annals of Statistics},
+  volume={35},
+  number={6},
+  pages={2769--2794},
+  year={2007},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@ONLINE{cdca,
+  author = {Centers for Disease Control and Prevention},
+  title = {Percentile Data Files with LMS Values},
+  url = {http://www.cdc.gov/growthcharts/percentile\_data\_files.htm}
+}
+
+@ONLINE{cdcb,
+  author = {Centers for Disease Control and Prevention},
+  title = {Clinical Growth Charts},
+  url = {http://www.cdc.gov/growthcharts/percentile\_data\_files.htm}
+}
+
+@ONLINE{rnceus,
+  author = {RnCeus Interactive},
+  title = {Pediatric Vital Sign Normal Ranges},
+  url = {http://www.rnceus.com/psvt/psvtvs.html}
+}
+
+@ONLINE{emedicine,
+  author = {Medscape},
+  title = {Normal Vital Signs },
+  url = {http://emedicine.medscape.com/article/2172054-overview}
+}
